Optimize ImageCache with LinkedHashMap LRU, improve code idioms and cache locality
Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>